--- a/Computing_Assignment_VII/group_Trans_Pacific_Partnership/assign_7_Trans_Pacific_Partnership.Rmd
+++ b/Computing_Assignment_VII/group_Trans_Pacific_Partnership/assign_7_Trans_Pacific_Partnership.Rmd
@@ -63,7 +63,7 @@ We can also carry out the Hausman test another way (as seen in our regression ap
 
 Thus we concluded that controlling for supply shock in the OLS regression reduces the endogeneity problem of measuring the effect of futures price on output supply.
 
-```{r setup, include=FALSE}
+```{r setup2, include=FALSE}
 # Problem 4
 
 IV_area<-ivreg(ln_area~ ln_fp + ln_w+ trendsp1+trendsp2 +trendsp3 | ln_fp+ln_w+lag_ln_w+ trendsp1+trendsp2+trendsp3, data=RSdata)
@@ -74,7 +74,7 @@ summary(IV_qs)
 
 The supply elasticity for total quantity is approximately $0.9$ and that for area is $0.63$. The difference stems from $log(yield)$ which is $ln(qs) - ln(area)$. The mean of $log(yield)$ is $2.13$ ranging from $1.57$ to $2.57$. The correlation of $ln(qs)$ and $log(area)$ is almost one.
 
-```{r setup, include=FALSE}
+```{r, include=FALSE}
 
 cor(RSdata$ln_area, RSdata$ln_qs)
 a<-RSdata$ln_qs-RSdata$ln_area
@@ -94,7 +94,7 @@ summary(IV_qs_reduced)
 
 The supply elasticity is almost $0.1$, which is close to the coefficient estimated with the full sample.
 
-```{r setup, include=FALSE}
+```{r, include=FALSE}
 summary(IV_qd_reduced)  
 
 ```
