--- a/Computing_Assignment_VIII/Clustered_Errors/Assignment_8.Rmd
+++ b/Computing_Assignment_VIII/Clustered_Errors/Assignment_8.Rmd
@@ -15,11 +15,6 @@ select <- dplyr::select
 ```
 
 ```{r sim}
-Sigma <-matrix(c(1, 0.7, 0.7, 1), 2)
-X <-mvrnorm(n=n,c(0, 0), Sigma = Sigma)
-y <- 1.2 + 0.3*X[,1]+1.1*X[,2] + rnorm(n)
-
-
 sim_reg <- function(n=100, B=200) {
   Sigma <-matrix(c(1, 0.7, 0.7, 1), 2)
   X <-mvrnorm(n=n, c(0, 0), Sigma = Sigma)
@@ -38,7 +33,7 @@ sim_reg <- function(n=100, B=200) {
   
   ## Delta
   # R <- COMPUTE IT for the three parameters
-  R <- c(1.1, -0.3)
+  R <- c(0, 1.1, -0.3)
   v_theta <- as.numeric(t(R) %*% vcov(reg_su) %*% R)
   
   # W-test
@@ -50,8 +45,8 @@ sim_reg <- function(n=100, B=200) {
            reg_su = map(reg, summary),
            reg_co = map(reg_su, tidy),
            theta_b = map_dbl(reg_co, ~ 1.1 * .$estimate[2] - 0.3 * .$estimate[3]),
-           R <- c(1.1, -0.3),
-           vcov_b = map2_dbl(reg_su, t(R) %*% vcov(.) %*% R),
+           R = map(reg_co, c(0, 1.1, -0.3)),
+           vcov_b = map2_dbl(reg_su, R, t(.y) %*% vcov(.x) %*% .y),
            W_test_b = map2_dbl(theta_b, vcov_b, ((.x)^2)/.y),
            W_test_b2 = map2_dbl(theta_b, vcov_b, ((.x - theta_hat)^2)/.y))
   x_boot2 <- x_boot %>% 
@@ -65,10 +60,12 @@ sim_reg <- function(n=100, B=200) {
   data_frame(co_X1 = co_X1, co_X2 = co_X2, theta = theta_hat, W_test = W_test, var = v_theta) %>% 
     bind_cols(x_boot2)
   }
-
-
-
 ```
+
+```{r}
+results <- sim_reg(100,200)
+```
+
 
 # Cross Validation
 
