--- a/Computing_Assignment_VIII/Clustered_Errors/Assignment_8.Rmd
+++ b/Computing_Assignment_VIII/Clustered_Errors/Assignment_8.Rmd
@@ -2,11 +2,15 @@
 title: "Assignment_8"
 author: "Clustered Errors"
 date: "3/14/2018"
-output: ioslides_presentation
+output:
+  ioslides_presentation: 
+    widescreen: true 
+    smaller: true
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
+library(knitr)
 library(MASS)
 library(broom)
 library(modelr)
@@ -102,11 +106,34 @@ The output data frame contains the results of the regressions and the calculatio
 
 The variable `resids_out` is calculated by using the estimated regression model from the training set to predict values using the one observation left out of the sample (the testing set). Essentially, the `map_dbl` function takes values from the variables `reg` and `test`, which are are regression output and a data frame respectively, uses the function `predict` to predict $\hat{y}$ values, and calculates the residuals as $\hat{y} - y$. In this case, `.x` is the regression output stored in `reg`, and `.y` is the testing set in `test`. 
 
-```{r}
+## Cross Validation: Summary of Results
 
+```{r}
+crossval_summary <- crossval %>%
+  group_by(model, mse) %>%
+  summarize(overall_mse = mean(value))
+
+kable(crossval_summary, digits = 3, col.names = c("Model", "In vs. Out", "Overall MSE"))
 ```
 
+_Reg1 vs. Reg2:_ Counterintuitely, we found that the mean squared error was slightly lower from the regression of $y$ on $x_1$ and $x_2$ as compared to the regression on $x_1$ alone. This is surprising given that the underlying DGP has $y$ as a function of only $x_1$. Therefore, the model with only $x_1$ should be expected to perform better. However, the difference in MSE between both models is very small. 
 
-## Cross Validation: Summary of Results
+_In-Sample vs. Out-of-Sample:_ For both models the in-sample MSE is lower. This is to be expected given that the models are estimated using the data in the sample, so the MSE is bound to be lower when compared to the error from the out-of-sample prediction. 
+
+## Cross Validation: Estimation on the Full Data Set
+
+```{r}
+full_reg <- lm(y ~ x1 + x2, data_df)
+h <- hatvalues(full_reg)
+resids <- residuals(full_reg)
+sigma_tilde <- (resids^2) / ((1 - h)^2)
+mean_sigma_tilde <- mean(sigma_tilde)
+
+crossval_summary[5, ] <- c("hansen", "mse_out", mean_sigma_tilde)
+kable(crossval_summary, digits = 3, col.names = c("Model", "In vs. Out", "Overall MSE"))
+```
+
+Calculating the out-of-sample MSE using Hansen equation 3.47 results in exactly the same out-of-sample MSE as from the simulation. 
+
 
 
